Api Normalizzatore e Deduplicatore
