# src/main/java/it/pagopa/pn/address/manager/rest/DeduplicatesAddressController.java
@@ -39,7 +39,7 @@ public class DeduplicatesAddressController implements DeduplicatesAddressService
     @Override
     public Mono<ResponseEntity<DeduplicatesResponse>> deduplicates(String pnAddressManagerCxId, String xApiKey, Mono<DeduplicatesRequest> deduplicatesRequest, ServerWebExchange exchange) {
         return deduplicatesRequest
-                .flatMap(request -> deduplicatesAddressService.deduplicates(request, xApiKey))
+                .flatMap(request -> deduplicatesAddressService.deduplicates(request, pnAddressManagerCxId, xApiKey))
                 .map(deduplicateResponse -> ResponseEntity.ok().body(deduplicateResponse))
                 .publishOn(scheduler);
     }
