# src/main/java/it/pagopa/pn/address/manager/rest/NormalizzatoreController.java
@@ -12,34 +12,35 @@ import reactor.core.scheduler.Scheduler;
 
 @RestController
 public class NormalizzatoreController implements NormalizzatoreApi {
-    @Qualifier ("addressManagerScheduler")
+    @Qualifier("addressManagerScheduler")
     private final Scheduler scheduler;
     private final NormalizzatoreService normalizzatoreService;
 
-    public NormalizzatoreController (Scheduler scheduler, NormalizzatoreService normalizzatoreService) {
+    public NormalizzatoreController(Scheduler scheduler, NormalizzatoreService normalizzatoreService) {
         this.scheduler = scheduler;
         this.normalizzatoreService = normalizzatoreService;
     }
 
     @Override
-    public Mono<ResponseEntity<PreLoadResponseData>> presignedUploadRequest (String pnAddressManagerCxId, String xApiKey, Mono<PreLoadRequestData> preLoadRequestData, final ServerWebExchange exchange) {
+    public Mono<ResponseEntity<PreLoadResponseData>> presignedUploadRequest(String pnAddressManagerCxId, String xApiKey, Mono<PreLoadRequestData> preLoadRequestData, final ServerWebExchange exchange) {
         return preLoadRequestData
-                .flatMap(preLoadRequestData1 -> normalizzatoreService.presignedUploadRequest(preLoadRequestData1, pnAddressManagerCxId))
+                .flatMap(preLoadRequestData1 -> normalizzatoreService.presignedUploadRequest(preLoadRequestData1, pnAddressManagerCxId, xApiKey))
                 .map(preLoadResponseData -> ResponseEntity.ok().body(preLoadResponseData))
                 .publishOn(scheduler);
     }
 
     @Override
-    public Mono<ResponseEntity<FileDownloadResponse>> getFile (String fileKey, String pnAddressManagerCxId, String xApiKey, final ServerWebExchange exchange) {
-        return normalizzatoreService.getFile(fileKey, pnAddressManagerCxId)
-                .map(fileDownloadResponse -> ResponseEntity.ok().body(fileDownloadResponse))
-                .publishOn(scheduler);
+    public Mono<ResponseEntity<FileDownloadResponse>> getFile(String fileKey, String pnAddressManagerCxId, String xApiKey, final ServerWebExchange exchange) {
+        return normalizzatoreService.checkApiKey(pnAddressManagerCxId, xApiKey)
+                .flatMap(apiKeyModel -> normalizzatoreService.getFile(fileKey, pnAddressManagerCxId)
+                        .map(fileDownloadResponse -> ResponseEntity.ok().body(fileDownloadResponse))
+                        .publishOn(scheduler));
     }
 
     @Override
-    public Mono<ResponseEntity<CallbackResponseData>> callbackNormalizedAddress(String pnAddressManagerCxId, String xApiKey, Mono<CallbackRequestData> callbackRequestData, final ServerWebExchange exchange) {
-        return callbackRequestData
-                .flatMap(requestData -> normalizzatoreService.callbackNormalizedAddress(requestData, pnAddressManagerCxId))
+    public Mono<ResponseEntity<OperationResultCodeResponse>> normalizerCallback(String pnAddressManagerCxId, String xApiKey, Mono<NormalizerCallbackRequest> normalizerCallbackRequest,  final ServerWebExchange exchange) {
+        return normalizerCallbackRequest
+                .flatMap(requestData -> normalizzatoreService.callbackNormalizedAddress(requestData, pnAddressManagerCxId, xApiKey))
                 .map(callbackResponseData -> ResponseEntity.ok().body(callbackResponseData))
                 .publishOn(scheduler);
     }
